--- a/doc/yoshimi_user_guide/files/style.css
+++ b/doc/yoshimi_user_guide/files/style.css
@@ -61,6 +61,11 @@ a:link {
     width: 20%;
 }
 
+.tiny {
+    float: right;
+    width: 12%;
+}
+
 @media (max-width: 644px) {
   .image {
     float: left;
@@ -74,5 +79,8 @@ a:link {
   }
 
   .small {
-    width: 98%;
+    width: 50%;
+
+  .tiny {
+    width: 40%;
 }
